force-app/main/default/objects/Welcome_Resource_Link__mdt/Welcome_Resource_Link__mdt.object-meta.xml
<CustomObject>
    <description>Stores resource link records for the Welcome Page LWC. Records are filtered at runtime based on the running user&apos;s profile, company, and Salesforce area permissions.</description>
    <label>Welcome Resource Link</label>
    <pluralLabel>Welcome Resource Links</pluralLabel>
</CustomObject>