force-app/main/default/objects/Welcome_Resource_Link__mdt/fields/Company_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Company_Criteria__c</fullName>
    <label>Company Criteria</label>
    <description>Exact company name (matches User.CompanyName, case-insensitive) that can see this resource. Leave blank to show the link to users from all companies.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>