force-app/main/default/objects/Welcome_Resource_Link__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <description>Optional short description displayed beneath the link label on the Welcome Page.</description>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>