force-app/main/default/objects/Welcome_Resource_Link__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <label>Icon Name</label>
    <description>SLDS icon name used on the resource link button (e.g. utility:bookmark, standard:case).</description>
    <type>Text</type>
    <length>100</length>
</CustomField>