force-app/main/default/objects/Welcome_Resource_Link__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>When unchecked, this record is excluded from all Welcome Page queries and will not be displayed to any user.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>