force-app/main/default/objects/Welcome_Resource_Link__mdt/fields/Profile_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Profile_Criteria__c</fullName>
    <label>Profile Criteria</label>
    <description>Comma-separated list of Salesforce Profile names that can see this resource. Leave blank to show the link to all profiles.</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>