force-app/main/default/objects/Welcome_Resource_Link__mdt/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <description>Controls where the link is rendered on the Welcome Page. Getting Started appears in the onboarding banner for new users. Support appears in the Need Help card. Training appears in area sections.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Getting Started</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>