force-app/main/default/objects/Welcome_Resource_Link__mdt/fields/Salesforce_Area__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Area__c</fullName>
    <label>Salesforce Area</label>
    <description>Determines which functional area this resource belongs to. General (or blank) is visible to all users. All other values require the corresponding User.[Area]_User__c field to equal Yes.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>PSA</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>OBO</fullName>
            </value>
            <value>
                <fullName>INV</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>NZC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>