force-app/main/default/objects/Welcome_Resource_Link__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <description>Integer controlling the display order of link buttons within their section. Lower values appear first. Records with no Sort Order are placed last.</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>