force-app/main/default/objects/Welcome_Resource_Link__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <description>Target URL for the resource link button.</description>
    <type>Url</type>
</CustomField>